--- a/dev/css/explore.dev.css
+++ b/dev/css/explore.dev.css
@@ -1,6 +1,33 @@
 
+div.top {
+  position: relative;
+}
 .buttonContainer {
   height: 100%;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  padding-top: 2px;
+}
+img.logo {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+.topIconTextButton {
+  box-sizing: border-box;
+  text-align: center;
+  display: inline-block;
+  width: 50px;
+  height: 100%;
+  transform: translateY(50%);
+}
+.topIconTextButton i {
+  display: block;
+  font-size: 25px;
+}
+.topIconTextButtonContent {
+  transform: translateY(-50%);
 }
 .propertyEditor .togglePacked {
   position: absolute;
@@ -26,25 +53,13 @@
   padding: 2px 10px;
   margin-top: 4px;
 }
-.iconButton, .iconTextButton {
+.button {
   cursor: pointer;
   color: #00fff1;
   opacity: 0.6;
 }
-.iconButton:hover, .iconTextButton:hover {
+.button:hover {
   opacity: 1;
-}
-.iconTextButton {
-  box-sizing: border-box;
-  padding-top: 10px;
-  text-align: center;
-  display: inline-block;
-  width: 50px;
-  height: 100%;
-}
-.iconTextButton i {
-  display: block;
-  font-size: 25px;
 }
 .iconButton {
   border-radius: 3px;
