--- a/src/editor/ui/buttons.scss
+++ b/src/editor/ui/buttons.scss
@@ -1,23 +1,10 @@
-.iconButton, .iconTextButton {
+.button {
   cursor: pointer;
   color: $layout-effect-color;
   opacity: 0.6;
 }
-.iconButton:hover, .iconTextButton:hover {
+.button:hover {
   opacity: 1;
-}
-
-.iconTextButton {
-  box-sizing: border-box;
-  padding-top: 10px;
-  text-align: center;
-  display: inline-block;
-  width: 50px;
-  height: 100%;
-}
-.iconTextButton i {
-  display: block;
-  font-size: 25px;
 }
 
 .iconButton {
