--- a/dev/css/explore.dev.css
+++ b/dev/css/explore.dev.css
@@ -1,4 +1,163 @@
 
+.button {
+  cursor: pointer;
+  color: #00fff1;
+  opacity: 0.6;
+  transition: all 0.3s;
+}
+.button:hover {
+  opacity: 1;
+}
+.iconButton {
+  border-radius: 3px;
+  padding: 1px;
+  margin: 0px;
+  font-size: 1.3em;
+}
+.moduleContainer {
+  display: flex;
+  flex-direction: column;
+}
+.tabs {
+  padding-top: 5px;
+  overflow: hidden;
+  background: #181818;
+  background: black;
+  min-height: 20px;
+}
+.moduleElements {
+  flex: 1;
+  overflow: hidden;
+  position: relative;
+}
+.moduleTab {
+  background: #2c2c2c;
+  padding: 1px 5px;
+  border-top: 1px solid;
+  border-left: 1px solid;
+  border-right: 1px solid;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.moduleTab:not(.active) {
+  filter: saturate(0);
+  /*opacity: 0.5;*/
+  background: #2c2c2c;
+}
+.moduleTab.active {
+  opacity: 1;
+}
+body, html {
+    background: #363636;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    color: #b1cacb;
+}
+.packButton {
+    position: absolute;
+    padding: 2px 10px;
+    margin-top: 1px;
+    z-index: 100;
+}
+div.editorLayout {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+div.packable {
+    transition: all 0.3s;
+    position: relative;
+}
+div.packable > * {
+    transition: opacity 0.3s;
+}
+div.nonRight {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+div.right {
+    border-left: 1px solid #00fff1;
+    width: 300px;
+    border-radius: 8px;
+    min-width: 200px;
+}
+div.right.packed {
+    max-width: 30px;
+    min-width: 30px;
+    width: 30px;
+}
+div.right .packButton {
+    top: 0;
+    right: 0;
+}
+div.top {
+    min-height: 60px;
+    height: 10vh;
+    border-bottom: 1px solid #00fff1;
+}
+div.middle {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+}
+div.bottom {
+    border-top: 1px solid #00fff1;
+    min-height: 150px;
+    max-height: 300px;
+    height: 25vh;
+}
+div.bottom.packed {
+    min-height: 30px;
+    max-height: 30px;
+}
+div.bottom .packButton {
+    top: 0;
+    right: 0;
+}
+div.left {
+    border-right: 1px solid #00fff1;
+    width: 300px;
+}
+div.left.packed {
+    width: 30px;
+}
+div.left .packButton {
+    right: 0;
+    top: 0;
+}
+div.center {
+    flex: 1;
+    background: black;
+    /*color: #adadad;*/
+}
+div.packed {
+    border-color: #426e69;
+}
+div.packed:hover {
+    cursor: pointer;
+}
+div.packed > * {
+    opacity: 0 !important;
+    visibility: hidden;
+}
+.module {
+  opacity: 1;
+  transition: opacity 0.2s;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: auto;
+  visibility: visible;
+}
+.module.hidden {
+  opacity: 0.0;
+  visibility: hidden;
+}
 div.top {
   position: relative;
 }
@@ -29,121 +188,12 @@ img.logo {
 .topIconTextButtonContent {
   transform: translateY(-50%);
 }
-.propertyEditor .togglePacked {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 2px 10px;
-  margin-top: 4px;
+.module-TopBar {
+  overflow: hidden;
 }
-.propertyEditor {
-  min-width: 200px;
+.propertyEditor table:first-child {
+  display: none;
 }
-.left .togglePacked {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 2px 10px;
-  margin-top: 4px;
-}
-.bottom .togglePacked {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 2px 10px;
-  margin-top: 4px;
-}
-.button {
-  cursor: pointer;
-  color: #00fff1;
-  opacity: 0.6;
-}
-.button:hover {
-  opacity: 1;
-}
-.iconButton {
-  border-radius: 3px;
-  padding: 2px;
-  margin: 1px;
-  font-size: 1.5em;
-}
-body, html {
-    background: #363636;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-}
-div.editorLayout {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-}
-div.packable {
-    transition: all 0.3s;
-    position: relative;
-}
-div.packable > * {
-    transition: opacity 0.3s;
-}
-div.packable:not(:hover) .togglePacked {
-    opacity: 0.1;
-}
-div.nonRight {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-div.propertyEditor {
-    border-left: 1px solid #00fff1;
-    width: 300px;
-    border-radius: 8px;
-}
-div.propertyEditor.packed {
-    max-width: 30px;
-    min-width: 30px;
-    width: 30px;
-}
-div.top {
-    min-height: 60px;
-    height: 10vh;
-    border-bottom: 1px solid #00fff1;
-}
-div.middle {
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-}
-div.bottom {
-    border-top: 1px solid #00fff1;
-    min-height: 150px;
-    max-height: 300px;
-    height: 25vh;
-}
-div.bottom.packed {
-    min-height: 30px;
-    max-height: 30px;
-}
-div.left {
-    border-right: 1px solid #00fff1;
-    width: 300px;
-}
-div.left.packed {
-    width: 30px;
-}
-div.center {
-    flex: 1;
-    background: black;
-}
-div.packed {
-    border-color: #426e69;
-}
-div.packed:hover {
-    cursor: pointer;
-}
-div.packed > * {
-    opacity: 0 !important;
-    visibility: hidden;
+.module-Scene {
+  /*background: black;*/
 }
