--- a/src/editor/layout/buttons.scss
+++ b/src/editor/layout/buttons.scss
@@ -2,6 +2,7 @@
   cursor: pointer;
   color: $layout-effect-color;
   opacity: 0.6;
+  transition: all 0.3s;
 }
 .button:hover {
   opacity: 1;
@@ -9,7 +10,7 @@
 
 .iconButton {
   border-radius: 3px;
-  padding: 2px;
-  margin: 1px;
-  font-size: 1.5em;
+  padding: 1px;
+  margin: 0px;
+  font-size: 1.3em;
 }
