--- a/src/editor/layout/moduleContainer.scss
+++ b/src/editor/layout/moduleContainer.scss
@@ -6,9 +6,10 @@
 .tabs {
   padding-top: 5px;
   overflow: hidden;
-  background: #181818;
-  background: black;
+  /* background: #181818; */
+  background: rgba(255, 255, 255, 0.02);
   min-height: 20px;
+  border-bottom: 1px solid rgba(0, 231, 255, 0.04);
 }
 
 .moduleElements {
