--- a/dev/css/explore.dev.css
+++ b/dev/css/explore.dev.css
@@ -178,7 +178,8 @@ img.logo {
   box-sizing: border-box;
   text-align: center;
   display: inline-block;
-  width: 50px;
+  min-width: 50px;
+  margin: 0 7px;
   height: 100%;
   transform: translateY(50%);
 }
@@ -189,7 +190,7 @@ img.logo {
 .topIconTextButtonContent {
   transform: translateY(-50%);
 }
-.module-TopBar {
+.module-topbar {
   overflow: hidden;
 }
 .propertyEditor table:first-child {
