--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -1,5 +1,5 @@
 @import "layout/layout.scss";
 @import "module/module.scss";
 @import "module/topBar.scss";
-@import "module/property.scss";
+@import "module/type.scss";
 @import "module/scene.scss";
