--- a/dev/css/explore.dev.css
+++ b/dev/css/explore.dev.css
@@ -48,15 +48,6 @@
 .moduleTab.active {
   opacity: 1;
 }
-body, html {
-    background: #363636;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    color: #b1cacb;
-}
 .packButton {
     position: absolute;
     padding: 2px 10px;
@@ -196,6 +187,70 @@ img.logo {
 .propertyEditor table:first-child {
   display: none;
 }
+.module-types .addTypeButton {
+  transform: translateY(1px);
+  margin-left: 5px;
+  margin-bottom: 3px;
+  margin-right: 15px;
+  font-size: 1.05em;
+  color: #b1cacb;
+}
+.module-types .addTypeButton:hover {
+  color: #00fff1;
+}
+.module-types input {
+  background: transparent;
+  color: #b1cacb;
+  outline: none;
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  border: 1px solid #426e69;
+  width: 70px;
+}
+.module-types .searchIcon {
+  color: #426e69;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 0.7em;
+  pointer-events: none;
+}
 .module-Scene {
   /*background: black;*/
+}
+.jstree-default .jstree-search {
+  color: #b1cacb;
+  left: 10px;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: normal;
+  filter: brightness(1.3);
+}
+.jstree-default .jstree-search i {
+  display: none;
+}
+.jstree-default .jstree-search::before {
+  font-family: FontAwesome;
+  content: '\f002';
+  color: #00fff1;
+  margin-left: 5px;
+  margin-right: 6px;
+}
+.jstree-default .jstree-hovered {
+  background: none;
+  color: #00fff1;
+}
+.jstree-default .jstree-clicked {
+  background: #223f3a;
+  color: #00fff1;
+}
+body, html {
+  background: #363636;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  color: #b1cacb;
 }
