--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -1,5 +1,18 @@
+@import 'variables.scss';
 @import "layout/layout.scss";
 @import "module/module.scss";
 @import "module/topBar.scss";
 @import "module/type.scss";
+@import "module/types.scss";
 @import "module/scene.scss";
+@import "treeView.scss";
+
+body, html {
+  background: $other-backround;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  color: $editor-text-color;
+}
