--- a/src/editor/layout/buttons.scss
+++ b/src/editor/layout/buttons.scss
@@ -1,6 +1,6 @@
 .button {
   cursor: pointer;
-  color: $layout-effect-color;
+  color: $editor-effect-color;
   opacity: 0.6;
   transition: all 0.3s;
 }
