--- a/dev/css/explore.dev.css
+++ b/dev/css/explore.dev.css
@@ -95,6 +95,11 @@ div.top {
 div.middle {
     flex: 1;
     display: flex;
+    flex-direction: column;
+}
+div.bottomLeft {
+    flex: 1;
+    display: flex;
     flex-direction: row;
 }
 div.bottom {
