--- a/src/editor/layout/layout.scss
+++ b/src/editor/layout/layout.scss
@@ -50,6 +50,11 @@ div.top {
 div.middle {
     flex: 1;
     display: flex;
+    flex-direction: column;
+}
+div.bottomLeft {
+    flex: 1;
+    display: flex;
     flex-direction: row;
 }
 div.bottom {
