stuff going forward

--- a/dev/css/explore.dev.css
+++ b/dev/css/explore.dev.css
@@ -258,4 +258,5 @@ body, html {
   padding: 0;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   color: #b1cacb;
+  font-size: 14px;
 }
