--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -15,4 +15,5 @@ body, html {
   padding: 0;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   color: $editor-text-color;
+  font-size: 14px;
 }
