--- a/src/editor/variables.scss
+++ b/src/editor/variables.scss
@@ -1,6 +1,6 @@
 
 $cool-cyan: #00fff1;
-$cool-cyan-dark: #426e69;
+$cool-cyan-dark: #406c6e;
 $cool-cyan-darker: #223f3a;
 $cool-cyan-light: #b1cacb;
 $bright-green: #53ff00;
