--- a/dev/css/explore.dev.css
+++ b/dev/css/explore.dev.css
@@ -1,8 +1,7 @@
 
 .button {
   cursor: pointer;
-  color: #00fff1;
-  opacity: 0.6;
+  opacity: 0.7;
   transition: all 0.3s;
 }
 .button:hover {
@@ -13,6 +12,35 @@
   padding: 1px;
   margin: 0px;
   font-size: 1.3em;
+}
+button.button {
+  background: #9c9c9c;
+  background: linear-gradient(to bottom right, #a0a0a0, #3a3a3a);
+  border: 1px outset #8e8e8e;
+  border-radius: 6px;
+  color: #dddddd;
+  outline: none;
+  box-shadow: 0 0 3px black;
+  margin: 3px;
+  padding: 2px 8px;
+  opacity: 0.85;
+  font-size: 12px;
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.76);
+}
+button.button:hover {
+  color: #00fff1;
+}
+button.button:active {
+  color: #00fff1;
+  border-style: inset;
+}
+button.button.dangerButton {
+  color: #ffbcc1;
+  /*text-shadow: 0 0 1px rgba(0, 0, 0, 0.66);*/
+}
+button.button.dangerButton:hover {
+  color: #ffb6bf;
+  text-shadow: 0 0 2px red;
 }
 .moduleContainer {
   display: flex;
@@ -39,6 +67,7 @@
   border-right: 1px solid;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  color: #00fff1;
 }
 .moduleTab:not(.active) {
   filter: saturate(0);
@@ -132,15 +161,15 @@ div.center {
     background: black;
     /*color: #adadad;*/
 }
-div.packed {
-    border-color: #426e69;
+div.moduleContainer.packed {
+    border-color: #406c6e;
 }
-div.packed:hover {
+div.moduleContainer.packed:hover {
     cursor: pointer;
 }
-div.packed > * {
+div.moduleContainer.packed > * {
     opacity: 0 !important;
-    visibility: hidden;
+    display: none !important;
 }
 .module {
   opacity: 1;
@@ -178,6 +207,7 @@ img.logo {
   margin: 0 7px;
   height: 100%;
   transform: translateY(50%);
+  color: #00fff1;
 }
 .topIconTextButton i {
   display: block;
@@ -188,9 +218,6 @@ img.logo {
 }
 .module-topbar {
   overflow: hidden;
-}
-.propertyEditor table:first-child {
-  display: none;
 }
 .module-types .addTypeButton {
   transform: translateY(1px);
@@ -210,11 +237,11 @@ img.logo {
   position: absolute;
   top: 2px;
   right: 2px;
-  border: 1px solid #426e69;
+  border: 1px solid #406c6e;
   width: 70px;
 }
 .module-types .searchIcon {
-  color: #426e69;
+  color: #406c6e;
   position: absolute;
   top: 5px;
   right: 5px;
@@ -249,6 +276,146 @@ img.logo {
 .jstree-default .jstree-clicked {
   background: #223f3a;
   color: #00fff1;
+}
+div.propertyEditor div.container[type='icd'] {
+  border: 1px solid #00fff1;
+  box-shadow: 0 0 13px 0px black;
+  border-right: none;
+  padding: 5px;
+  padding-right: 0;
+  margin: 5px 0;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  transition: opacity 0.5s;
+}
+div.propertyEditor div.container.packed[type='icd'] {
+  opacity: 0.6;
+  filter: saturate(0.8);
+}
+div.propertyEditor div.container[type='icd'] .containerContent {
+  overflow: auto;
+  height: auto;
+  transition: opacity 0.4s, max-height 0.3s cubic-bezier(1, 0, 1, 1);
+  max-height: 500px;
+}
+div.propertyEditor div.container.packed .containerContent {
+  opacity: 0;
+  max-height: 0;
+  transition: opacity 0.4s, max-height 0.3s cubic-bezier(0, 1, 1, 1);
+}
+.propertyEditor {
+  padding-left: 5px;
+  padding-bottom: 5px;
+}
+div.propertyEditor div.containerTitle {
+  cursor: pointer;
+  border-radius: 3px;
+  position: relative;
+  padding-left: 23px;
+  margin-bottom: 5px;
+}
+div.propertyEditor .packed div.containerTitle {
+}
+div.propertyEditor div.containerTitle:hover {
+  color: #00fff1;
+  background: rgba(255, 255, 255, 0.05);
+}
+div.propertyEditor div.containerTitle .icon {
+  position: absolute;
+  top: 2px;
+  left: 4px;
+}
+div.propertyEditor table {
+  border-collapse: collapse;
+}
+tr.property {
+  border-bottom: 3px solid;
+  border-color: #363636;
+  color: #b1cacb;
+  transition: opacity 0.4s;
+}
+td.nameCell {
+  width: 10px;
+  white-space: nowrap;
+  padding: 3px 5px;
+  background: rgba(0, 0, 0, 0.2);
+  border-top-left-radius: 5px;
+}
+td.propertyContent {
+  width: 99%;
+  padding: 3px 5px;
+  background: rgba(0, 0, 0, 0.2);
+  position: relative;
+  box-sizing: border-box;
+}
+.property:not(.ownProperty) {
+  opacity: 0.65;
+}
+.container[type='icd'] .property.ownProperty .propertyContent {
+  padding-right: 30px;
+}
+.property .removeButton {
+  position: absolute;
+  top: 3px;
+  right: 7px;
+  color: #997d7d;
+}
+.property .removeButton:hover {
+  color: #ff6969;
+}
+.property input {
+  background: #272727;
+  border: 1px inset #444;
+  padding: 2px 3px;
+  outline: none;
+  color: inherit;
+  width: 100%;
+  box-sizing: border-box;
+}
+.property input[error] {
+  color: #ff738d;
+}
+div.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+div.popup div.popupLayer {
+  background: black;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+}
+div.popup div.popupContent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 400px;
+  min-height: 80px;
+  max-width: 90%;
+  max-height: 90%;
+  display: inline-block;
+  background: gray;
+  background: linear-gradient(to bottom right, #858585, #606060);
+  border-radius: 20px;
+  padding: 10px;
+  border: 1px solid #00fff1;
+  box-shadow: 1px 8px 22px 4px black;
+}
+div.popup div.popupText {
+  color: #00fff1;
+  margin: 15px;
+  margin-top: 10px;
+  text-align: center;
+  font-size: 1.2em;
+}
+div.popup div.popupButtons {
+}
+div.popup div.buttonContainer {
+  display: flex;
 }
 body, html {
   background: #363636;
