--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -1,11 +1,14 @@
 @import 'variables.scss';
+@import 'buttons.scss';
 @import "layout/layout.scss";
 @import "module/module.scss";
 @import "module/topBar.scss";
 @import "module/type.scss";
 @import "module/types.scss";
 @import "module/scene.scss";
-@import "treeView.scss";
+@import "views/treeView.scss";
+@import "views/propertyEditor.scss";
+@import "views/popup.scss";
 
 body, html {
   background: $other-backround;
