--- a/src/editor/variables.scss
+++ b/src/editor/variables.scss
@@ -8,6 +8,7 @@ $bright-green: #53ff00;
 
 
 $editor-effect-color: $cool-cyan;
+$editor-effect-color: #ddfabc;
 $editor-effect-color-inactive: $cool-cyan-dark;
 $editor-effect-color-dark: $cool-cyan-darker;
 $editor-text-color: $cool-cyan-light;
