--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -8,6 +8,7 @@
 @import "module/scene.scss";
 @import "views/treeView.scss";
 @import "views/propertyEditor.scss";
+@import "views/propertyEditorTypes.scss";
 @import "views/popup.scss";
 
 body, html {
