--- a/src/editor/variables.scss
+++ b/src/editor/variables.scss
@@ -8,9 +8,9 @@ $bright-green: #53ff00;
 
 
 $editor-effect-color: $cool-cyan;
-$editor-effect-color: #ddfabc;
-$editor-effect-color-inactive: $cool-cyan-dark;
-$editor-effect-color-dark: $cool-cyan-darker;
+$editor-effect-color: #fae900;
+$editor-effect-color-inactive: #908f4d;
+$editor-effect-color-dark: #393928;
 $editor-text-color: $cool-cyan-light;
 $center-backround: black;
 $other-backround: #363636;
