--- a/src/editor/views/popup/popup.scss
+++ b/src/editor/views/popup/popup.scss
@@ -31,7 +31,7 @@ div.popup div.popupContent {
   box-shadow: 1px 8px 22px 4px black;
 }
 
-div.popup div.popupText {
+div.popup div.popupTitle {
   color: $editor-effect-color;
   margin: 15px;
   margin-top: 10px;
