--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -9,7 +9,7 @@
 @import "views/treeView.scss";
 @import "views/propertyEditor.scss";
 @import "views/propertyEditorTypes.scss";
-@import "views/popup.scss";
+@import "views/popup/popup.scss";
 
 body, html {
   background: $other-backround;
