--- a/src/editor/module/scene.scss
+++ b/src/editor/module/scene.scss
@@ -1,3 +1,11 @@
-.module-Scene {
-  //background: black;
+.module-scene {
+  padding: 0;
+  overflow: hidden;
+}
+
+.module-scene canvas {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0
 }
