--- a/src/editor/layout/moduleContainer.scss
+++ b/src/editor/layout/moduleContainer.scss
@@ -29,11 +29,14 @@
   border-top-right-radius: 5px;
   color: $editor-effect-color;
 }
-.moduleTab:not(.active) {
+.moduleTab:not(.moduleSelected) {
   filter: saturate(0);
   //opacity: 0.5;
   background: #2c2c2c;
 }
-.moduleTab.active {
+.moduleTab.moduleSelected {
   opacity: 1;
+}
+.moduleTab:not(.moduleEnabled) {
+  display: none;
 }
