--- a/src/editor/module/scene.scss
+++ b/src/editor/module/scene.scss
@@ -9,3 +9,60 @@
   margin: 0;
   padding: 0
 }
+
+.module-scene .pauseSignContainer {
+  /*
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  */
+}
+.module-scene.hidePauseButtons .pauseInfo {
+  display: none;
+}
+
+.module-scene .pauseInfo {
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */
+  cursor: default;
+}
+
+.module-scene i.pauseInfo {
+  position: absolute;
+  border: 3px solid;
+  padding: 3px 5px;
+  margin: 5px;
+  font-size: 40px;
+  color: rgba(100, 100, 100, 0.4);
+}
+.module-scene .topLeft {
+  top: 0;
+  left: 0;
+}
+.module-scene .topRight {
+  top: 0;
+  right: 0;
+}
+.module-scene .bottomLeft {
+  bottom: 0;
+  left: 0;
+}
+.module-scene .bottomRight {
+  bottom: 0;
+  right: 0;
+}
+
+.module-scene div.pauseInfo {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0 3px black;
+  opacity: 0.7;
+}
