level selection and visibleIf-properties

--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -10,6 +10,7 @@
 @import "views/propertyEditor.scss";
 @import "views/propertyEditorTypes.scss";
 @import "views/popup/popup.scss";
+@import "views/popup/levelSelectorButtons.scss";
 
 body, html {
   background: $other-backround;
