--- a/src/editor/variables.scss
+++ b/src/editor/variables.scss
@@ -6,11 +6,13 @@ $cool-cyan-light: #b1cacb;
 $bright-green: #53ff00;
 
 
-$editor-effect-color: $cool-cyan;
-$editor-effect-color: #fae900;
-$editor-effect-color-inactive: #908f4d;
-$editor-effect-color-dark: #393928;
-$editor-text-color: $cool-cyan-light;
+//$editor-effect-color: $cool-cyan;
+$editor-effect-color: #d4d4d4;
+$editor-effect-color-inactive: #a1a3a4;
+$editor-effect-color-dark: #444344;
+$editor-text-color: #d6d6d6;
+$editor-border-color: #d6d6d6;
+
 $center-backround: black;
 $other-backround: #363636;
 $other-backround-hilighted: #505050;
