--- a/src/editor/layout/moduleContainer.scss
+++ b/src/editor/layout/moduleContainer.scss
@@ -36,6 +36,7 @@
 }
 .moduleTab.moduleSelected {
   opacity: 1;
+  text-shadow: 0px 0px 1px #777;
 }
 .moduleTab:not(.moduleEnabled) {
   display: none;
