--- a/src/editor/module/topBar.scss
+++ b/src/editor/module/topBar.scss
@@ -11,10 +11,21 @@ div.top {
   padding-top: 2px;
 }
 
+@keyframes rainbow {
+  0%   {
+    filter: sepia(100%) hue-rotate(0deg);
+  }
+  100% {
+    filter: sepia(100%) hue-rotate(360deg);
+  }
+}
 img.logo {
   height: 100%;
   margin: 0;
   padding: 0;
+}
+img.logo:hover {
+  animation: rainbow 7s infinite;
 }
 
 .topIconTextButton {
@@ -40,3 +51,4 @@ img.logo {
 .module-topbar {
   overflow: hidden;
 }
+
