editor module activation fixes

--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -26,3 +26,10 @@ body, html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-shadow: 1px 1px 1px #060606;
 }
+
+.select-none {
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */
+}
