--- a/src/editor/variables.scss
+++ b/src/editor/variables.scss
@@ -7,13 +7,14 @@ $bright-green: #53ff00;
 
 
 //$editor-effect-color: $cool-cyan;
-$editor-effect-color: #d4d4d4;
+$editor-effect-color: #d7d7d7;
 $editor-effect-color-inactive: #a1a3a4;
 $editor-effect-color-dark: #444344;
-$editor-text-color: #d6d6d6;
-$editor-border-color: #d6d6d6;
+$editor-text-color: #c3c3c3;
+$editor-border-color: #bfbfbf;
 
 $center-backround: black;
 $other-backround: #363636;
 $other-backround-hilighted: #505050;
 $layout-border-color: $editor-effect-color;
+
