--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -3,6 +3,7 @@
 @import "layout/layout.scss";
 @import "module/module.scss";
 @import "module/topBar.scss";
+@import "module/game.scss";
 @import "module/type.scss";
 @import "module/types.scss";
 @import "module/scene.scss";
