--- a/src/editor/variables.scss
+++ b/src/editor/variables.scss
@@ -7,6 +7,7 @@ $bright-green: #53ff00;
 
 
 //$editor-effect-color: $cool-cyan;
+//$editor-effect-color: #f3ebd8;
 $editor-effect-color: #d7d7d7;
 $editor-effect-color-inactive: #a1a3a4;
 $editor-effect-color-dark: #444344;
