--- a/template/frontPage.html
+++ b/template/frontPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Open Game Engine</title>
+    <title>Open Edit Play</title>
     <style>
         @keyframes rainbowLittle {
             0%   { filter: sepia(30%) hue-rotate(0deg); }
