--- a/template/frontPage.html
+++ b/template/frontPage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/img/logo_graphics.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Open Edit Play</title>
@@ -12,8 +13,8 @@
 
         #logo {
             position: absolute;
-            top: 0;
-            left: 0;
+            top: 15px;
+            left: 20px;
             width: 100px;
             animation: rainbowLittle 7s infinite;
         }
@@ -66,7 +67,7 @@
     </style>
 </head>
 <body>
-<img id="logo" src="/img/logo_reflection_medium.png">
+<img id="logo" src="/img/logo_graphics.png">
 
 <div id="newGame">
     <a href="/edit/?gameId=?">New game</a>
