--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -7,6 +7,7 @@
 @import "module/type.scss";
 @import "module/types.scss";
 @import "module/scene.scss";
+@import "module/performance.scss";
 @import "views/treeView.scss";
 @import "views/propertyEditor.scss";
 @import "views/propertyEditorTypes.scss";
