--- a/builds/openeditplay.editor.css
+++ b/builds/openeditplay.editor.css
@@ -355,6 +355,27 @@ img.logo:hover {
   text-shadow: 0 0 3px black;
   opacity: 0.7;
 }
+.module.module-performance {
+  padding: 5px 10px;
+}
+.performanceList {
+}
+.performanceCPU {
+  width: 280px;
+}
+.performanceHeader {
+  font-weight: bold;
+  border-top: none !important;
+}
+.performanceItem {
+  border-top: 1px solid #424242;
+}
+.performanceItemName {
+  display: inline-block;
+  width: 220px;
+}
+.performanceItemValue {
+}
 .jstree-default .jstree-search {
   color: #c3c3c3;
   left: 10px;
