--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -13,6 +13,10 @@
 @import "views/propertyEditorTypes.scss";
 @import "views/popup/popup.scss";
 
+* {
+  box-sizing: border-box;
+}
+
 body, html {
   background: $other-backround;
   width: 100%;
