--- a/src/editor/views/propertyEditor.scss
+++ b/src/editor/views/propertyEditor.scss
@@ -30,6 +30,10 @@ div.propertyEditor div.container.packed .containerContent {
   transition: opacity 0.4s, max-height 0.3s cubic-bezier(0, 1, 1, 1);
 }
 
+.skipPropertyEditorTransitions * {
+  transition-duration: 0s !important;
+}
+
 div.propertyEditor div.container {
   position: relative;
 }
