--- a/src/editor/views/propertyEditor.scss
+++ b/src/editor/views/propertyEditor.scss
@@ -113,6 +113,7 @@ td.propertyContent {
 .container[type='com'] .property.ownProperty .propertyContent{
   padding-right: 30px;
 }
+
 .property .resetButton {
   position: absolute;
   top: 3px;
@@ -121,6 +122,16 @@ td.propertyContent {
 }
 .property .resetButton:hover {
   color: #ff6969;
+}
+
+.property .moreButton {
+  position: absolute;
+  top: 3px;
+  right: 15px;
+  color: #8a998c;
+}
+.property .moreButton:hover {
+  color: #91ffa0;
 }
 
 .logButton {
