--- a/builds/openeditplay.editor.css
+++ b/builds/openeditplay.editor.css
@@ -357,21 +357,21 @@ img.logo:hover {
   text-shadow: 0 0 3px black;
   opacity: 0.7;
 }
-.zoomButtons {
+.sceneEditorSideBarButtons {
   display: none; /* This will be overridden */
   position: absolute;
   top: 0;
   right: 0;
 }
-.isInitialState .zoomButtons {
+.isInitialState .sceneEditorSideBarButtons {
   display: block;
 }
-.zoomButtons > i {
+.sceneEditorSideBarButtons > i {
   font-size: 20px;
   float: right;
   clear: both;
 }
-.zoomButtons > i:hover {
+.sceneEditorSideBarButtons > i:hover {
   
 }
 .module.module-performance {
