--- a/src/editor/module/scene.scss
+++ b/src/editor/module/scene.scss
@@ -67,22 +67,22 @@
   opacity: 0.7;
 }
 
-.zoomButtons {
+.sceneEditorSideBarButtons {
   display: none; /* This will be overridden */
   position: absolute;
   top: 0;
   right: 0;
 }
 
-.isInitialState .zoomButtons {
+.isInitialState .sceneEditorSideBarButtons {
   display: block;
 }
 
-.zoomButtons > i {
+.sceneEditorSideBarButtons > i {
   font-size: 20px;
   float: right;
   clear: both;
 }
-.zoomButtons > i:hover {
+.sceneEditorSideBarButtons > i:hover {
   
 }
