--- a/builds/openeditplay.editor.css
+++ b/builds/openeditplay.editor.css
@@ -294,6 +294,24 @@ img.logo:hover {
   font-size: 0.7em;
   pointer-events: none;
 }
+.typesDragHelper {
+  margin-top: 30px;
+  color: #2f2f2f;
+  text-shadow: none;
+  font-size: 30px;
+  letter-spacing: 5px;
+  
+  text-align: center;
+  
+  user-select: none;
+  cursor: default;
+}
+.typesDragHelper i {
+  margin: 20px;
+}
+.typesDragHelper.hidden {
+  display: none;
+}
 .module-scene {
   padding: 0;
   overflow: hidden;
