--- a/src/editor/module/types.scss
+++ b/src/editor/module/types.scss
@@ -29,3 +29,22 @@
   font-size: 0.7em;
   pointer-events: none;
 }
+
+.typesDragHelper {
+  margin-top: 30px;
+  color: #2f2f2f;
+  text-shadow: none;
+  font-size: 30px;
+  letter-spacing: 5px;
+  
+  text-align: center;
+  
+  user-select: none;
+  cursor: default;
+}
+.typesDragHelper i {
+  margin: 20px;
+}
+.typesDragHelper.hidden {
+  display: none;
+}
