--- a/src/editor/module/scene.scss
+++ b/src/editor/module/scene.scss
@@ -84,6 +84,10 @@
   clear: both;
 }
 
+.sceneEditorSideBarButtons .movement {
+  opacity: 0.5;
+}
+
 .sceneContextButtons {
   float: right;
   clear: both;
