--- a/builds/openeditplay.css
+++ b/builds/openeditplay.css
@@ -34,3 +34,14 @@ canvas {
 #fullscreenInfo.showSlowly {
   opacity: 1 !important;
 }
+#backButton {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  background: white;
+  color: black;
+  z-index: 10;
+}
