--- a/public/play/css/openeditplay.css
+++ b/public/play/css/openeditplay.css
@@ -15,6 +15,7 @@ canvas {
   width: 100% !important;
   height: 100% !important;
 }
+
 #fullscreenInfo {
   position: absolute;
   top: 10px;
@@ -33,4 +34,21 @@ canvas {
 }
 #fullscreenInfo.showSlowly {
   opacity: 1 !important;
+}
+
+#backButton {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 30px;
+  color: white;
+  font-weight: bold;
+  z-index: 10;
+}
+@media (min-width: 800px) {
+  #backButton {
+    display: none;
+  }
 }
